# d-trade

./: README.md  boltfile.py  pyproject.toml
dtrade/: about.py
poc/: config.json  config.py  finance.py
poc/sample_data/: sample_data.py
poc/services/: yahoo.py
tests/: test_about.py
tests/test_services/: test_yahoo.py
