[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "d_trade"
version = "0.1.0"
description = "A simple project to help read stock information"
authors = ["Dan Kimball"]

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "*"
bolt-ta = "^0.3.5"
conttest = "^0.0.8"
assertpy = "^1.1"

[tool.poetry.dev-dependencies]
bolt-ta = "*"
pytest = "*"
pytest-cov = "*"